[package]
name = "ggez-goodies"
description = "Various small useful add-ons for the ggez game framework"
version = "0.5.0-rc.1"
repository = "https://github.com/ggez/ggez-goodies"
documentation = "https://docs.rs/ggez-goodies"
authors = ["Simon Heath <icefoxen@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[profile.dev]
opt-level = 1

[dependencies]
ggez = "0.5.0-rc.1"
nalgebra-glm = "0.4.0"
tiled = "0.8"
euclid = {version = "0.19", features = ["mint"]}

[dev-dependencies]
ezing = "0.2"
